# IntlGemma

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  docker-compose.yml  docker-run.sh  pyproject.toml
docs/: CHECKLIST.md  DOCKER.md  EXAMPLES.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  ORGANIZATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  VALIDATION.md
src/translate_intl/: __main__.py  cli.py
src/translate_intl/core/: config.py  languages.py  translator.py
src/translate_intl/models/: translation.py
src/translate_intl/services/: file_service.py  translation_service.py
src/translate_intl/utils/: json_handler.py  progress.py  validators.py
tests/: conftest.py  test_json_handler.py  test_services.py  test_validation.py
