[project]
name = "translate-intl"
version = "0.1.0"
description = "CLI tool for translating next-intl projects using TranslateGemma"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Roman Petrakov", email = "development@telfia.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "llama-cpp-python>=0.2.26",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
]

[project.scripts]
translate-intl = "translate_intl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translate_intl"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
